--- a/CSS/style.css
+++ b/CSS/style.css
@@ -3,3 +3,33 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+/* regole macrostruttura */
+header {
+    height: 60px;
+    width: 100%;
+}
+
+#main-nav {
+    height: calc(100vh - 60px);
+    width: 70px;
+    background-color: #051E34;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1em 0;
+}
+
+/* regole main nav */
+.ms-nav-item {
+    color: white;
+    padding: 0.5em 1em;
+}
+.ms-nav-item:hover {
+    background-color: #ffffff73;
+}
+
+.ms-nav-item a {
+    display: none;
+}
